--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,7 @@ a {
     display: flex;
     align-items: center;
     text-align: center;
-    height: 50vh;
+    min-height: 500px;
 }
 
 .ba-hero__title {
@@ -81,4 +81,85 @@ a {
     content: '/';
     display: inline-block;
     margin: 0 .5em;
+}
+
+.ba-info__title {
+    font-size: 1.875rem;
+    text-transform: uppercase;
+    position: relative;
+}
+
+.ba-info__title::before {
+    content: '';
+    position: absolute;
+    display: inline-block;
+    background-color: #7beec7;
+    height: 0.7em;
+    width: 2.26em;
+    top: 1rem;
+    z-index: -1;
+}
+
+.ba-info__subtitle {
+    display: block;
+    text-transform: uppercase;
+    font-size: .875rem;
+}
+
+.ba-section__header {
+    text-align: center;
+}
+
+.ba-benefit {
+    margin-bottom: 3em;
+}
+
+.ba-benefit__title {
+    font-size: 1.125rem;
+    display: flex;
+    align-items: center;
+    margin: 0;
+}
+
+.ba-benefit__icon {
+    width: 40px;
+    height: 40px;
+    background-color: #7beec7;
+    color: #fff;
+    font-size: 30px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 20px;
+}
+
+.ba-team-member {
+    width: 100%;
+    height: 333px;
+    margin-bottom: 30px;
+    color: #fff;
+    overflow: hidden;
+    position: relative;
+}
+
+.ba-team-member__img {
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+
+.ba-team-member__info {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color:rgba(123, 238, 199, 0.78);
+    position: absolute;
+    top: -100%;
+    transition: .4s;
+}
+
+.ba-team-member:hover .ba-team-member__info{
+    transform: translateY(100%);
 }
