--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,9 @@
-body{
+body {
     font-family: 'Open Sans', sans-serif;
     color: #60606e;
 }
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
 }
@@ -13,7 +13,7 @@ a {
     text-decoration: none;
 }
 
-.ba-menu{
+.ba-menu {
     display: flex;
     align-items: center;
     list-style: none;
@@ -34,7 +34,7 @@ a {
     padding-top: 40px;
 }
 
-.ba-header-wrapper{
+.ba-header-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -46,7 +46,8 @@ a {
 }
 
 /* ba-hero */
-.ba-hero{
+
+.ba-hero {
     background-color: #adaeae;
     background-image: url(../img/hero.jpg);
     background-size: cover;
@@ -77,7 +78,7 @@ a {
     text-transform: uppercase;
 }
 
-.ba-breadcrumbs__item + .ba-breadcrumbs__item::before{
+.ba-breadcrumbs__item+.ba-breadcrumbs__item::before {
     content: '/';
     display: inline-block;
     margin: 0 .5em;
@@ -133,6 +134,17 @@ a {
     margin-right: 20px;
 }
 
+.ba-benefit__icon svg {
+    width: 30px;
+    height: 30px;
+    fill: #fff;
+    color: #fff;
+}
+
+.ba-benefit__icon:hover svg {
+    color: red;
+}
+
 .ba-team-member {
     width: 100%;
     height: 333px;
@@ -146,20 +158,129 @@ a {
     height: 100%;
     width: 100%;
     display: block;
+    object-fit: cover;
+    object-position: center;
 }
 
 .ba-team-member__info {
     width: 100%;
     height: 100%;
     display: flex;
+    color: #fff;
     flex-direction: column;
     justify-content: center;
-    background-color:rgba(123, 238, 199, 0.78);
+    background-color: rgba(123, 238, 199, 0.78);
     position: absolute;
     top: -100%;
     transition: .4s;
+    text-align: center;
 }
 
-.ba-team-member:hover .ba-team-member__info{
+.ba-team-member__info svg {
+    fill: #fff;
+    color: #fff;
+}
+
+.ba-team-member__name {
+    margin: 0;
+}
+
+.ba-team-member__position {
+    margin: 0;
+}
+
+.ba-team-member:hover .ba-team-member__info {
     transform: translateY(100%);
+}
+
+.ba-footer {
+    background-color: #7beec7;
+    padding: 50px 0;
+}
+
+.ba-footer__title {
+    color: #fff;
+    font-size: 1.875rem;
+}
+
+.ba-subscribe {
+    background-color: #fff;
+    padding: 20px;
+}
+
+.ba-subscribe__title {
+    font-size: 1.5rem;
+}
+
+.ba-subscribe-form {
+    display: flex;
+}
+
+.ba-input {
+    height: 50px;
+    padding: 1em;
+    border: 1px solid #60606e;
+    border-right: none;
+    flex-grow: 1;
+}
+
+::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color: #60606e;
+    text-transform: uppercase;
+}
+
+::-moz-placeholder {
+    /* Firefox 19+ */
+    color: #60606e;
+    text-transform: uppercase;
+}
+
+:-ms-input-placeholder {
+    /* IE 10+ */
+    color: #60606e;
+    text-transform: uppercase;
+}
+
+:-moz-placeholder {
+    /* Firefox 18- */
+    color: #60606e;
+    text-transform: uppercase;
+}
+
+.ba-btn {
+    display: inline-block;
+    height: 50px;
+    line-height: 50px;
+    border-radius: 2px;
+    background-color: #fff;
+    color: #7beec7;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: .875rem;
+    padding: 0 2em;
+    transition: .4s;
+    border: none;
+    min-width: 140px;
+}
+
+.ba-button_green {
+    background-color: #7beec7;
+    color: #fff;
+}
+
+.ba-btn:hover {
+    opacity: .8;
+}
+
+.visually-hidden {
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px);
+    /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0 !important;
+    border: 0 !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden;
 }
