--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,50 @@ a {
     text-decoration: none;
 }
 
+.ba-menu-btn {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    position: relative;
+    z-index: 10;
+}
+
+#menu-open:checked ~ .ba-menu-block {
+    transform: translateY(100%);
+}
+
+.ba-menu-btn__line {
+    display: block;
+    height: 1px;
+    background-color: #60606e;
+}
+
+.ba-menu-btn__line:nth-child(2) {
+    margin: 13px 0;
+    width: 50%;
+}
+
+.ba-menu-btn__line:nth-child(3) {
+    width: 75%;
+}
+
+.ba-menu-block{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #bce0c0;
+    left: 0;
+    top: -100%;
+    z-index: 5;
+    transition: .5s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .ba-menu {
     display: flex;
     align-items: center;
@@ -22,8 +66,71 @@ a {
 }
 
 .ba-menu__link {
-    color: inherit;
+    font-size: 1.5em;
+    color:#fff;
+    padding: 0 1em;
     text-decoration: none;
+    text-transform: capitalize;
+}
+
+.ba-menu__item {
+    position: relative;
+    overflow: hidden;
+    opacity: 0;
+    transform: translateY(-2.5em) scale(1.3);
+    transition: transform .5s ease, opacity .2s;
+}
+
+.ba-menu__item:after{
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    position: absolute;
+    bottom: 0;
+    left: -100%;
+    transition: .3s;
+}
+
+#menu-open:checked ~ .ba-menu-block .ba-menu__item {
+    transform: none;
+    opacity: 1;
+}
+
+#menu-open:checked ~ .ba-menu-block .ba-menu__item:after {
+    transform: translateX(200%);
+}
+
+#menu-open:checked ~ .ba-menu-block .ba-menu__item:nth-child(1) {
+    transition-delay: 1s;
+}
+
+#menu-open:checked ~ .ba-menu-block .ba-menu__item:nth-child(2) {
+    transition-delay: 1.15s;
+}
+
+#menu-open:checked ~ .ba-menu-block .ba-menu__item:nth-child(3) {
+    transition-delay: 1.3s;
+}
+
+#menu-open:checked ~ .ba-menu-block .ba-menu__item:nth-child(4) {
+    transition-delay: 1.45s;
+}
+
+#menu-open:checked ~ .ba-menu-block .ba-menu__item:nth-child(1):after {
+    transition-delay: 1.5s;
+}
+
+#menu-open:checked ~ .ba-menu-block .ba-menu__item:nth-child(2):after {
+    transition-delay: 1.7s;
+}
+
+#menu-open:checked ~ .ba-menu-block .ba-menu__item:nth-child(3):after {
+    transition-delay: 1.9s;
+}
+
+#menu-open:checked ~ .ba-menu-block .ba-menu__item:nth-child(4):after {
+    transition-delay: 2.1s;
 }
 
 .ba-header {
